# dmscopy

./: Makefile  Makefile.in  README.md  configure  configure.ac  dmscopy.c  t_dmscopy.c
src/: Makefile.am  Makefile.in  dmscopy.c  dmscopy.h  dmscopy.par  t_dmscopy.c
test/: Makefile.am  Makefile.in
wrapper/: Makefile.am  Makefile.in
